Played with the html by adding text and css file by adding font, alignment and background color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 body {
-    background: white;
-    font-family: Arial, Helvetica, sans-serif;
+    background: gray;
+    
+}
+header {
+    font-family:sans-serif;
     text-align: center;
+    
     margin-left: auto;
+    background-color: darkgreen;
+}
+
+p1,p2 {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: left;
+    margin-left: auto;
+}
+
+Ol {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: left;
+    margin-left: auto;
+}
 }
